[project]
name = "gtfs-validator-api"
version = "0.1.0"
description = "FastAPI wrapper for MobilityData GTFS Validator"

dependencies = [
    "aiohttp",
    "fastapi",
    "uvicorn[standard]",
    "uv",
    "aiohttp",
    "markdown",
    "slowapi",
    "bcrypt",
    "jinja2",
    "python-dotenv",
    "python-multipart",
    "fastapi-mail",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests",
    "starlette-openapi",
    "httpx",
    "google-cloud-firestore",
]
cloud = [
    "google-cloud-firestore",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "markdown"
ignore_missing_imports = true


